fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -112,5 +112,6 @@ main{
 
     footer{
         font-size: 0.8rem;
+        text-align: center;
     }
 }
